--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
+backend/src/TextCNNModel/resource/sgns.wiki.word
+backend/src/TextCNNModel/resource/sgns.wiki.word.pt
+backend/src/TextCNNModel/resource/stopwords.txt
