--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "sqlite3": "^5.0.2"
   }
 }
